[package]
name = "audio-interrogator"
version = "0.1.0"
edition = "2021"
authors = ["meganerd <meganerd@users.noreply.github.com>"]
license = "MIT"
description = "A Rust-based command-line tool for interrogating Linux audio devices and discovering their capabilities"
homepage = "https://github.com/meganerd/audio-interrogator"
repository = "https://github.com/meganerd/audio-interrogator"
documentation = "https://github.com/meganerd/audio-interrogator"
readme = "README.md"
keywords = ["audio", "alsa", "linux", "sound", "devices"]
categories = ["command-line-utilities", "multimedia::audio", "development-tools"]
exclude = [
    "target/",
    ".git/",
    "*.tmp",
    "*.log",
]

[[bin]]
name = "audio-interrogator"
path = "src/main.rs"

[dependencies]
alsa = "0.9"
cpal = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
